<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Inserting_page">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        android:textSize="25sp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linear1">

        <LinearLayout
            android:id="@+id/trserialno"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="1"
                android:text="@string/serialno"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/serialno_txt"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapSentences"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/enter_the_serial_no"
                android:textColorHint="@color/hinttxtcolor"
                android:textSize="20sp"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/trdistrict"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="20sp"
                android:text="@string/district"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/district_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_the_district"
                android:singleLine="true"
                android:inputType="textCapSentences"
                android:textColor="@android:color/black"
                android:textColorHint="@color/hinttxtcolor"
                android:textSize="20sp"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/trState"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/state"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/state_txt"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_state"
                android:singleLine="true"
                android:inputType="textCapSentences"
                android:textColor="@android:color/black"
                android:textColorHint="@color/hinttxtcolor"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/trlocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:paddingBottom="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="20sp"
                android:text="@string/location"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/location_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:hint="@string/enter_the_location"
                android:singleLine="true"
                android:inputType="textCapSentences"
                android:textColorHint="@color/hinttxtcolor"
                android:textColor="@android:color/black"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceLargeInverse" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:textSize="15dp"
            android:text="@string/status"
            android:textStyle="italic"
            android:textColor="@android:color/holo_red_light" />
        <LinearLayout
            android:id="@+id/trworking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:paddingBottom="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="20sp"
                android:text="@string/working"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />
            <Spinner
                android:id="@+id/spinner_work"
                android:spinnerMode="dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/trstatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:weightSum="2">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/warranty"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <RadioGroup
                    android:id="@+id/rgroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
            <RadioButton
                android:id="@+id/onradio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/on" />

            <RadioButton
                android:id="@+id/outradio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="3dp"
                android:text="@string/out" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/submit"
            android:textColor="@color/btntxtcolor"
            android:background="@drawable/botton_custom" />
            </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>