<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Update_page">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent">
        <TextView
            android:id="@+id/update_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linear1">

        <LinearLayout
            android:id="@+id/trserialno"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:padding="5dp"
                android:text="@string/serialno"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/serialno_e_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:hint="@string/enter_the_serial_no"
                android:textColor="@android:color/black"
                android:textColorHint="@color/hinttxtcolor"
                android:textSize="20sp"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
        <Button
            android:id="@+id/usearching_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/search"
            android:textColor="@color/btntxtcolor"
            android:background="@drawable/botton_custom" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/trdistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:paddingBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="20sp"
                android:text="@string/district"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/district_e_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_the_district"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/hinttxtcolor"
                android:textSize="20sp"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/trState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:paddingBottom="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/state"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/state_e_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/enter_the_state"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/hinttxtcolor"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/trlocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:paddingBottom="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="20sp"
                android:layout_weight="1"
                android:text="@string/location"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/location_e_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/enter_the_location"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/hinttxtcolor"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/trworking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:paddingBottom="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="20sp"
                android:text="@string/working"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />
            <Spinner
                android:id="@+id/spinner_work_up"
                android:spinnerMode="dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/trstatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:paddingBottom="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="20sp"
                android:text="@string/warranty"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <RadioGroup
                    android:id="@+id/rgroup_up"
                    android:weightSum="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/onradio_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/under" />

                    <RadioButton
                        android:id="@+id/outradio_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="3dp"
                        android:text="@string/out" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/trbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:paddingBottom="20dp">

        <Button
            android:id="@+id/uupdate_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/update"
            android:textColor="@color/btntxtcolor"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/botton_custom"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/udelete_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/botton_custom"
            android:text="@string/delete"
            android:textColor="@color/btntxtcolor"
            android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>