<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/calllog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="1dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/ser_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/serialno"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/dis_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/district"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/loc_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/location"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/sta_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/state"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />


<!--                    <RelativeLayout-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:layout_gravity="center_vertical"-->
<!--                        android:layout_marginRight="10dp"-->
<!--                        android:layout_weight="8">-->

<!--                    </RelativeLayout>-->

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/calllog"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/calllog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>